src/corelib/tools/qhash.h
@@ -40,6 +40,7 @@
 #include <QtCore/qlist.h>
 #include <QtCore/qrefcount.h>
 #include <QtCore/qhashfunctions.h>
+#include <QtCore/qalgorithms.h>
 
 #ifdef Q_COMPILER_INITIALIZER_LISTS
 #include <initializer_list>
@@ -916,18 +917,27 @@ Q_OUTOFLINE_TEMPLATE bool QHash<Key, T>::operator==(const QHash &other) const
     const_iterator it = begin();
 
     while (it != end()) {
-        const Key &akey = it.key();
+        // Build two equal ranges for i.key(); one for *this and one for other.
+        // For *this we can avoid a lookup via find, as we know the beginning of the range.
+        const_iterator thisEqualRangeEnd = it;
+        while (thisEqualRangeEnd != end() && it.key() == thisEqualRangeEnd.key())
+            ++thisEqualRangeEnd;
 
-        const_iterator it2 = other.find(akey);
-        do {
-            if (it2 == other.end() || !(it2.key() == akey))
-                return false;
-            if (!(it.value() == it2.value()))
-                return false;
-            ++it;
-            ++it2;
-        } while (it != end() && it.key() == akey);
+        const const_iterator otherEqualRangeBegin = other.find(it.key());
+        const_iterator otherEqualRangeEnd = otherEqualRangeBegin;
+        while (otherEqualRangeEnd != other.end() && it.key() == otherEqualRangeEnd.key())
+            ++otherEqualRangeEnd;
+
+        if (std::distance(it, thisEqualRangeEnd) != std::distance(otherEqualRangeBegin, otherEqualRangeEnd))
+            return false;
+
+        // Keys in the ranges are equal by construction; this checks only the values.
+        if (!QAlgorithmsPrivate::qIsPermutation(it, thisEqualRangeEnd, otherEqualRangeBegin))
+            return false;
+
+        it = thisEqualRangeEnd;
     }
+
     return true;
 }
 
